Remove SetEnv values from radosgw apache vhost template and fix naming
 - SetEnv stuff isn't needed now that radosgw runs as a separate daemon.
 - New naming is required for the updated radosgw init script coming in v0.37.

--- a/ceph/templates/default/rgw.conf.erb
+++ b/ceph/templates/default/rgw.conf.erb
@@ -1,4 +1,4 @@
-FastCgiExternalServer /var/www/s3gw.fcgi -socket /var/run/ceph/radosgw.client.rgw-<%= node[:hostname] %>
+FastCgiExternalServer /var/www/dummyradosgw.fcgi -socket /var/run/ceph/radosgw.client.radosgw.<%= node[:hostname] %>
 
 LogFormat "%{X-Forwarded-For}i %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" proxy_combined
 LogFormat "%{X-Forwarded-For}i %h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" proxy_debug
@@ -9,7 +9,7 @@ LogFormat "%{X-Forwarded-For}i %h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{Use
   DocumentRoot /var/www/
 
   RewriteEngine On
-  RewriteRule             ^/(.*) /s3gw.fcgi?params=$1&%{QUERY_STRING} [E=HTTP_AUTHORIZATION:%{HTTP:Authorization},L]
+  RewriteRule             ^/(.*) /dummyradosgw.fcgi?params=$1&%{QUERY_STRING} [E=HTTP_AUTHORIZATION:%{HTTP:Authorization},L]
 
   <IfModule mod_fastcgi.c>
     <Directory /var/www/>
@@ -21,16 +21,6 @@ LogFormat "%{X-Forwarded-For}i %h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{Use
       AuthBasicAuthoritative Off
     </Directory>
   </IfModule>
-
-  SetEnv RGW_DNS_NAME "<%= @ceph_api_fqdn %>"
-  SetEnv RGW_LOG_LEVEL 20
-  SetEnv RGW_PRINT_CONTINUE "yes"
-  SetEnv RGW_OPENSTACK_URL "http://<%= @ceph_api_fqdn %>"
-  SetEnv RGW_OPENSTACK_URL_PREFIX "swift"
-  SetEnv RGW_REMOTE_ADDR_PARAM "X-Forwarded-For"
-
-  SetEnv CEPH_ARGS "-n client.rgw-<%= node[:hostname] %>"
-  SetEnv RGW_SHOULD_LOG "yes"
 
   AllowEncodedSlashes On
 
