--- a/ceph/templates/default/upstart-ceph-mon-all.conf.erb
+++ b/ceph/templates/default/upstart-ceph-mon-all.conf.erb
@@ -5,7 +5,8 @@ start on filesystem
 task
 
 script
-  find /srv/ -mindepth 1 -maxdepth 1 -regextype posix-egrep -regex '.*/mon\.[0-9]+' -printf '%P\n' \
+  # TODO what's the valid charset for mon ids?
+  find /srv/ -mindepth 1 -maxdepth 1 -regextype posix-egrep -regex '.*/mon\.[a-z0-9]+' -printf '%P\n' \
   | while read f; do
     if [ -e "/srv/$f/done" ]; then
         id="${f##mon.}"
