Upstart refuses to show status of instance that is not running, work around.
(It doesn't know that that instance used to exist. That's fine. Just ugly.)

--- a/ceph/templates/default/upstart-ceph-mon-all.conf.erb
+++ b/ceph/templates/default/upstart-ceph-mon-all.conf.erb
@@ -13,7 +13,10 @@ script
 
 	# upstart start(8) fails if the job is already running
 	# https://bugs.launchpad.net/upstart/+bug/878322
-	if ! status ceph-mon MON_ID="$id" | grep -qE '^[^ ]+( \([^)]\))? start/'; then
+
+	# also cannot ask for status of instance that isn't running at
+	# that time, so just list all and filter that
+	if initctl list|mawk '$1=="ceph-mon" && $2=="(" INSTANCE ")" && $3~/start\// { exit 1 }' INSTANCE="$id"; then
  	  start ceph-mon MON_ID="$id"
 	fi
     fi
