--- a/ceph/templates/default/upstart-ceph-osd-all.conf.erb
+++ b/ceph/templates/default/upstart-ceph-osd-all.conf.erb
@@ -12,7 +12,10 @@ script
 
 	# upstart start(8) fails if the job is already running
 	# https://bugs.launchpad.net/upstart/+bug/878322
-	if ! status ceph-osd OSD_ID="$id" | grep -qE '^[^ ]+( \([^)]\))? start/'; then
+
+	# also cannot ask for status of instance that isn't running at
+	# that time, so just list all and filter that
+	if initctl list|mawk '$1=="ceph-osd" && $2=="(" INSTANCE ")" && $3~/start\// { exit 1 }' INSTANCE="$id"; then
 	  start ceph-osd OSD_ID="$id"
 	fi
     fi
