$id is safe to use in upstart job vars, so simplify.
MON_ID becomes id. OSD_ID becomes id.

--- a/ceph/templates/default/upstart-ceph-mon-all.conf.erb
+++ b/ceph/templates/default/upstart-ceph-mon-all.conf.erb
@@ -17,7 +17,7 @@ script
 	# also cannot ask for status of instance that isn't running at
 	# that time, so just list all and filter that
 	if initctl list|mawk '$1=="ceph-mon" && $2=="(" INSTANCE ")" && $3~/start\// { exit 1 }' INSTANCE="$id"; then
- 	  start ceph-mon MON_ID="$id"
+	  start ceph-mon id="$id"
 	fi
     fi
   done
