Set ceph.conf fsid and mon_initial_members based on Chef attributes.
Setting an environment to contain e.g.

  "default_attributes": {
    "ceph": {
      "config": {
        "fsid": "85749980-4bc2-47ce-8f6f-9064df84fe06",
        "mon_initial_members": ["foo"]
      }
    }
  },

will set the variables in ceph.conf, ensuring multiple monitors
coming up concurrently construct a consistent cluster, and only
one of them.

Contents of mon_initial_members need to be chosen with care. Please
refer to the documentation (once it's ready).

--- a/ceph/templates/default/ceph.conf.erb
+++ b/ceph/templates/default/ceph.conf.erb
@@ -1,4 +1,5 @@
 [global]
+	fsid = <%= @fsid %>
 	auth supported = cephx
 	keyring = /etc/ceph/$cluster.$name.keyring
 
@@ -7,6 +8,7 @@
 	# sections, and come up with names for the mons just to be
 	# able to list their addresses
  	mon host = <%= @mon_addresses.join(', ') %>
+	mon initial members = <%= @mon_initial_members.join(', ') %>
 
 [mon]
 	keyring = /var/lib/ceph/mon/$cluster-$id/keyring
