Passthrough arbitrary (global) config variables to ceph.conf.
Still sanity checking that the ones we want are provided.

--- a/ceph/templates/default/ceph.conf.erb
+++ b/ceph/templates/default/ceph.conf.erb
@@ -1,5 +1,4 @@
 [global]
-	fsid = <%= @fsid %>
 	auth supported = cephx
 	keyring = /etc/ceph/$cluster.$name.keyring
 
@@ -8,7 +7,10 @@
 	# sections, and come up with names for the mons just to be
 	# able to list their addresses
  	mon host = <%= @mon_addresses.join(', ') %>
-	mon initial members = <%= @mon_initial_members.join(', ') %>
+
+	<% node['ceph']['config'].each do |k, v| %>
+	<%= k %> = <%= v %>
+	<% end %>
 
 [mon]
 	keyring = /var/lib/ceph/mon/$cluster-$id/keyring
