--- a/ceph/templates/default/ceph.conf.erb
+++ b/ceph/templates/default/ceph.conf.erb
@@ -22,3 +22,11 @@
 	keyring = /var/lib/ceph/osd/$cluster-$id/keyring
 	osd journal size = 1000
 	filestore_xattr_use_omap = true
+
+<% node['ceph']['config-sections'].each do |name, sect| %>
+
+[<%= name %>]
+<% sect.each do |k, v| %>
+<%= k %> = <%= v %>
+<% end %>
+<% end %>
